# esp32-experiments

./: .gitignore  .gitmodules  LICENSE  README.md
clock/: CMakeLists.txt  platformio.ini
clock-gate/: CMakeLists.txt  clock.c.old
clock-gate/src/: CMakeLists.txt  clock.c  gates.c
clock-with-ui/: CMakeLists.txt
clock-with-ui/src/: CMakeLists.txt  clock-with-ui.c
clock/main/: CMakeLists.txt  clock.c
clock/src/: CMakeLists.txt
clock/util/: gates.c
counter/src/: counter.c
display-text/: platformio.ini
display-text/src/: CMakeLists.txt  display.c
drum-track/: CMakeLists.txt
drum-track-refactor/src/: CMakeLists.txt  display.c  drum-track.c  gate.c
drum-track/src/: CMakeLists.txt  drum-track.c
drumv1/: -  wifi.h
drumv1/src/: CMakeLists.txt  display.h  drum-track.c  gate.h  osc.c  wifi.c  wifi.h
drumv2/: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.old
drumv2/lib/local_gates/: clocking.c  local_gates.c  local_gates.h
drumv2/lib/local_wifi/: local_wifi.c
drumv2/lib/sequencer/: sequencer.c  sequencer.h
drumv2/lib/wifi/: mywifi.h
drumv2/src/: main.c
encoder/: CMakeLists.txt
encoder/src/: CMakeLists.txt  encoder.c
osc-server/: platformio.ini  sdkconfig.old
osc-server/lib/clocking/: clocking.c
osc-server/lib/esp-tinyosc/: esp-tinyosc.c  esp-tinyosc.h
osc-server/lib/udp-server/: udp-server.c  udp-server.h
osc-serverv2/: CMakeLists.txt  sdkconfig
osc-serverv2/lib/clocking/: clocking.h
osc-serverv2/lib/wifi/: mywifi.c
osc-serverv2/src/: main.c
